# scorecard

./: README.md
backend/: pyproject.toml
backend/api/: urls.py
backend/api/views/football/: urls.py  views.py
backend/scorecard/: asgi.py  settings.py  urls.py  wsgi.py
scorecard/: app.json  package-lock.json  package.json
scorecard/app/: _layout.tsx  home.tsx  index.tsx
scorecard/app/(tabs)/: _layout.tsx  index.tsx  leagues.tsx
scorecard/components/: ScoreBug.tsx  scores_example.ts
scorecard/components/ui/gluestack-ui-provider/: config.ts
scorecard/constants/: Colors.ts
